in HTML: added whatsapp to the mobile and fixed the lack of space in email; in CSS: added some of the html properties to make everything move to the middle of the screen when stretching, added background colour and border radius to make the header more visible; changed margin in <li> properties; changed <a> properties - colour and removed text - decoration; removed the repetitive code for contact, location and services background properties

--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,16 @@ body > .contact {
         'header header header'
         'services services contact'
         'services services location';
+        
     }
+   
+    html {
+        max-width:max-content;
+        margin: 0 auto;
+        justify-content:space-around;
+        
+    }
+
 }
 
 header {
@@ -56,8 +65,9 @@ header {
     padding: 0.5em;
     justify-content:flex-start;
     text-align: center;
+    background-color:rgba(255, 255, 255, 0.14);
+    border-radius: 70%;
     
-    /* border: 3px solid rgb(33, 58, 128); */
 }
 
 h1 {
@@ -77,7 +87,7 @@ p {
 
 li {
     list-style-type:"✔";
-    margin: 0 3em;
+    margin: 0 3em 0.7em;;
 }
 
 .bespoke {
@@ -89,24 +99,17 @@ li {
     text-align: center;
 }
 
+a {
+    text-decoration: none;
+    color:rgb(77, 8, 77);
+}
 
-.provided-services {
+
+.provided-services,
+.location,
+.contact {
     /* border: 3px solid red; */
     background: rgba(255, 255, 255, 0.70);
     backdrop-filter: blur(0.5px);
     border-radius: 8px;
-}
-
-.location {
-    /* border: 3px solid yellow; */
-    background: rgba(255, 255, 255, 0.70);
-    border-radius: 8px;
-    backdrop-filter: blur(0.5px);
-}
-
-.contact {
-    /* border: 3px solid rgb(145, 12, 150); */
-    background: rgba(255, 255, 255, 0.70);
-    border-radius: 8px;
-    backdrop-filter: blur(0.5px);
 }
